--- a/types/Subject.html
+++ b/types/Subject.html
@@ -26,7 +26,7 @@
 <li class="tsd-parameter">
 <h5>url<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></h5></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/6d2ce0e/src/rdf/types.ts#L11">src/rdf/types.ts:11</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/4cb1cdd/src/rdf/types.ts#L11">src/rdf/types.ts:11</a></li></ul></aside></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -90,6 +90,7 @@
 <li class="tsd-kind-variable"><a href="../variables/dqm.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>dqm</a></li>
 <li class="tsd-kind-variable"><a href="../variables/foaf.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>foaf</a></li>
 <li class="tsd-kind-variable"><a href="../variables/geo.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>geo</a></li>
+<li class="tsd-kind-variable"><a href="../variables/hardware.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>hardware</a></li>
 <li class="tsd-kind-variable"><a href="../variables/ogc.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>ogc</a></li>
 <li class="tsd-kind-variable"><a href="../variables/owl.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>owl</a></li>
 <li class="tsd-kind-variable"><a href="../variables/poso.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>poso</a></li>
