--- a/variables/xsd.html
+++ b/variables/xsd.html
@@ -40,7 +40,7 @@
 <li class="tsd-parameter">
 <h5>time<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">&quot;http://www.w3.org/2001/XMLSchema#time&quot;</span></h5></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/4cb1cdd/src/decorators/types.ts#L37">src/decorators/types.ts:37</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/b591fe6/src/decorators/types.ts#L37">src/decorators/types.ts:37</a></li></ul></aside></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -111,7 +111,6 @@
 <li class="tsd-kind-variable"><a href="posoc.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>posoc</a></li>
 <li class="tsd-kind-variable"><a href="quantitykind.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>quantitykind</a></li>
 <li class="tsd-kind-variable"><a href="qudt.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>qudt</a></li>
-<li class="tsd-kind-variable"><a href="qudt_unit.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>qudt_<wbr/>unit</a></li>
 <li class="tsd-kind-variable"><a href="rdf.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>rdf</a></li>
 <li class="tsd-kind-variable"><a href="rdfs.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>rdfs</a></li>
 <li class="tsd-kind-variable"><a href="schema.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>schema</a></li>
@@ -119,6 +118,7 @@
 <li class="tsd-kind-variable"><a href="ssn.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>ssn</a></li>
 <li class="tsd-kind-variable"><a href="ssns.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>ssns</a></li>
 <li class="tsd-kind-variable"><a href="time.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>time</a></li>
+<li class="tsd-kind-variable"><a href="unit.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>unit</a></li>
 <li class="tsd-kind-variable"><a href="vcard.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>vcard</a></li>
 <li class="current tsd-kind-variable"><a href="xsd.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>xsd</a></li></ul></nav></div></div>
 <div class="overlay"></div><script src="../assets/main.js"></script></body></html>
