deploy: fd3178a08723754bd21a3dcabf132ac85463d658

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <br />
 
 <p>This OpenHPS module adds RDF data support to the OpenHPS framework. The main vocabulary used for serializing data is the
-POsitioning System Ontology (POSO) ontology that will be presented at ISWC 2022.</p>
+POsitioning System Ontology (POSO) ontology that was presented at ISWC 2022.</p>
 
 <a href="#getting-started" id="getting-started" style="color: inherit; text-decoration: none;">
   <h2>Getting Started</h2>
@@ -46,6 +46,27 @@ POsitioning System Ontology (POSO) ontology that will be presented at ISWC 2022.
 <p>If you have <a href="https://www.npmjs.com/get-npm">npm installed</a>, start using @openhps/rdf with the following command.</p>
 <pre><code class="language-bash"><span class="hl-0">npm </span><span class="hl-1">install</span><span class="hl-0"> </span><span class="hl-1">@openhps/rdf</span><span class="hl-0"> </span><span class="hl-1">--save</span>
 </code></pre>
+
+<a href="#installation" id="installation" style="color: inherit; text-decoration: none;">
+  <h2>Installation</h2>
+</a>
+
+<a href="#web" id="web" style="color: inherit; text-decoration: none;">
+  <h3>Web</h3>
+</a>
+<ul>
+<li><code>openhps-rdf.js</code>: CJS export of RDF mappings, SPARQL data service</li>
+<li><code>openhps-rdf.vocab.js</code>: CJS export of common RDF vocabularies</li>
+<li><code>openhps-rdf.serialization.js</code>: CJS export of RDF serialization</li>
+<li><code>openhps-rdf.sparql.js</code>: CJS export of SPARQL data service and serialization</li>
+<li><code>openhps-rdf.all.js</code>: CJS export of RDF mappings, SPARQL data service and vocabularies</li>
+<li><code>openhps-rdf.es.js</code>: ESM export of RDF mappings, SPARQL data service</li>
+<li><code>openhps-rdf.vocab.es.js</code>: ESM export of common RDF vocabularies</li>
+<li><code>openhps-rdf.serialization.es.js</code>: ESM export of RDF serialization</li>
+<li><code>openhps-rdf.sparql.es.js</code>: ESM export of SPARQL data service and serialization</li>
+<li><code>openhps-rdf.all.es.js</code>: ESM export of RDF mappings, SPARQL data service and vocabularies</li>
+</ul>
+<p>Each export has a <code>*.min.js</code> version that is minified.</p>
 
 <a href="#usage" id="usage" style="color: inherit; text-decoration: none;">
   <h2>Usage</h2>
