deploy: 1b71d070ecd81e8acf9f70e0c53cf2a0989b68c5

--- a/functions/DataFactory.triple.html
+++ b/functions/DataFactory.triple.html
@@ -34,9 +34,9 @@
 <li>Defined in node_modules/@types/n3/index.d.ts:117</li></ul></aside></li>
 <li class="tsd-signature tsd-anchor-link" id="triple-1"><span class="tsd-kind-call-signature">triple</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">Q_In</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type tsd-kind-type-parameter">Q_Out</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">subject</span>, <span class="tsd-kind-parameter">predicate</span>, <span class="tsd-kind-parameter">object</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type tsd-kind-type-parameter">Q_Out</span><a href="#triple-1" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></li>
 <li class="tsd-description">
-<section class="tsd-panel tsd-type-parameters">
+<section class="tsd-panel">
 <h4>Type Parameters</h4>
-<ul class="tsd-type-parameters">
+<ul class="tsd-type-parameter-list">
 <li>
 <h4><span class="tsd-kind-type-parameter">Q_In</span><span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type ">BaseQuad</span> = <span class="tsd-signature-type ">Quad</span></h4></li>
 <li>
