--- a/classes/Parser.html
+++ b/classes/Parser.html
@@ -15,9 +15,9 @@
 <li><a href="../modules.html">@openhps/rdf</a></li>
 <li><a href="Parser.html">Parser</a></li></ul>
 <h1>Class Parser&lt;Q&gt;</h1></div> 
-<section class="tsd-panel tsd-type-parameters">
+<section class="tsd-panel">
 <h4>Type Parameters</h4>
-<ul class="tsd-type-parameters">
+<ul class="tsd-type-parameter-list">
 <li>
 <h4><span class="tsd-kind-type-parameter">Q</span><span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type ">BaseQuad</span> = <a href="Quad.html" class="tsd-signature-type tsd-kind-class">Quad</a></h4></li></ul></section> 
 <section class="tsd-panel tsd-hierarchy">
@@ -46,9 +46,9 @@
 <ul class="tsd-signatures tsd-is-external">
 <li class="tsd-signature tsd-anchor-link" id="constructor.new_Parser"><span class="tsd-kind-constructor-signature">new <wbr/>Parser</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">Q</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">options</span><span class="tsd-signature-symbol">?</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="Parser.html" class="tsd-signature-type tsd-kind-class">Parser</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">Q</span><span class="tsd-signature-symbol">&gt;</span><a href="#constructor.new_Parser" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></li>
 <li class="tsd-description">
-<section class="tsd-panel tsd-type-parameters">
+<section class="tsd-panel">
 <h4>Type Parameters</h4>
-<ul class="tsd-type-parameters">
+<ul class="tsd-type-parameter-list">
 <li>
 <h4><span class="tsd-kind-type-parameter">Q</span><span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type ">BaseQuad</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">Q</span><span class="tsd-signature-symbol">&gt;</span> = <a href="Quad.html" class="tsd-signature-type tsd-kind-class">Quad</a></h4></li></ul></section>
 <div class="tsd-parameters">
