--- a/classes/Store.html
+++ b/classes/Store.html
@@ -15,9 +15,9 @@
 <li><a href="../modules.html">@openhps/rdf</a></li>
 <li><a href="Store.html">Store</a></li></ul>
 <h1>Class Store&lt;Q_RDF, Q_N3, OutQuad, InQuad&gt;</h1></div> 
-<section class="tsd-panel tsd-type-parameters">
+<section class="tsd-panel">
 <h4>Type Parameters</h4>
-<ul class="tsd-type-parameters">
+<ul class="tsd-type-parameter-list">
 <li>
 <h4><span class="tsd-kind-type-parameter">Q_RDF</span><span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type ">RDF.BaseQuad</span> = <span class="tsd-signature-type ">RDF.Quad</span></h4></li>
 <li>
@@ -88,9 +88,9 @@
 <ul class="tsd-signatures tsd-is-external">
 <li class="tsd-signature tsd-anchor-link" id="constructor.new_Store"><span class="tsd-kind-constructor-signature">new <wbr/>Store</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">Q_RDF</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type tsd-kind-type-parameter">Q_N3</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type tsd-kind-type-parameter">OutQuad</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type tsd-kind-type-parameter">InQuad</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">triples</span><span class="tsd-signature-symbol">?</span>, <span class="tsd-kind-parameter">options</span><span class="tsd-signature-symbol">?</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="Store.html" class="tsd-signature-type tsd-kind-class">Store</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">Q_RDF</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type tsd-kind-type-parameter">Q_N3</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type tsd-kind-type-parameter">OutQuad</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type tsd-kind-type-parameter">InQuad</span><span class="tsd-signature-symbol">&gt;</span><a href="#constructor.new_Store" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></li>
 <li class="tsd-description">
-<section class="tsd-panel tsd-type-parameters">
+<section class="tsd-panel">
 <h4>Type Parameters</h4>
-<ul class="tsd-type-parameters">
+<ul class="tsd-type-parameter-list">
 <li>
 <h4><span class="tsd-kind-type-parameter">Q_RDF</span><span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type ">BaseQuad</span> = <span class="tsd-signature-type ">Quad</span></h4></li>
 <li>
