--- a/interfaces/SPARQLDriverOptions.html
+++ b/interfaces/SPARQLDriverOptions.html
@@ -26,7 +26,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">SPARQLDriverOptions</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/f9f43b7/src/service/SPARQLDataDriver.ts#L202">src/service/SPARQLDataDriver.ts:202</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/1b71d07/src/service/SPARQLDataDriver.ts#L202">src/service/SPARQLDataDriver.ts:202</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -55,7 +55,6 @@
 <a href="SPARQLDriverOptions.html#httpTimeout" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>http<wbr/>Timeout?</span></a>
 <a href="SPARQLDriverOptions.html#initialBindings" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>initial<wbr/>Bindings?</span></a>
 <a href="SPARQLDriverOptions.html#lenient" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>lenient?</span></a>
-<a href="SPARQLDriverOptions.html#localizeBlankNodes" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>localize<wbr/>Blank<wbr/>Nodes?</span></a>
 <a href="SPARQLDriverOptions.html#log" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>log?</span></a>
 <a href="SPARQLDriverOptions.html#queryFormat" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>query<wbr/>Format?</span></a>
 <a href="SPARQLDriverOptions.html#queryTimestamp" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>query<wbr/>Timestamp?</span></a>
@@ -79,7 +78,7 @@
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>base<wbr/>Uri</span><a href="#baseUri" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">base<wbr/>Uri</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-symbol">`</span><span class="tsd-signature-type">http://</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol">`</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-symbol">`</span><span class="tsd-signature-type">https://</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol">`</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/f9f43b7/src/service/SPARQLDataDriver.ts#L203">src/service/SPARQLDataDriver.ts:203</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/1b71d07/src/service/SPARQLDataDriver.ts#L203">src/service/SPARQLDataDriver.ts:203</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="datetime" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>datetime</span><a href="#datetime" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">datetime</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type ">Date</span></div><aside class="tsd-sources">
@@ -117,10 +116,10 @@
 <div class="tsd-comment tsd-typography"><p>Comunica query engine</p>
 
 <h3>Default</h3><pre><code class="language-ts"><span class="hl-0">@</span><span class="hl-3">comunica</span><span class="hl-0">/</span><span class="hl-3">query</span><span class="hl-0">-</span><span class="hl-3">sparql</span><span class="hl-0"> </span><span class="hl-3">QueryEngine</span>
-</code></pre>
+</code><button>Copy</button></pre>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/f9f43b7/src/service/SPARQLDataDriver.ts#L209">src/service/SPARQLDataDriver.ts:209</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/1b71d07/src/service/SPARQLDataDriver.ts#L209">src/service/SPARQLDataDriver.ts:209</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="explain" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>explain</span><a href="#explain" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">explain</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type ">QueryExplainMode</span></div><aside class="tsd-sources">
@@ -195,7 +194,7 @@
 <div class="tsd-signature"><span class="tsd-kind-property">http<wbr/>Auth</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-symbol">`</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-type">:</span><span class="tsd-signature-symbol">${</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol">`</span></div><aside class="tsd-sources">
 <p>Overrides QueryStringContext.httpAuth</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/f9f43b7/src/service/SPARQLDataDriver.ts#L204">src/service/SPARQLDataDriver.ts:204</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/1b71d07/src/service/SPARQLDataDriver.ts#L204">src/service/SPARQLDataDriver.ts:204</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="httpBodyTimeout" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>http<wbr/>Body<wbr/>Timeout</span><a href="#httpBodyTimeout" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">http<wbr/>Body<wbr/>Timeout</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">boolean</span></div><aside class="tsd-sources">
@@ -250,12 +249,6 @@
 <p>Inherited from QueryStringContext.lenient</p>
 <ul>
 <li>Defined in node_modules/@comunica/types/lib/IQueryContext.d.ts:30</li></ul></aside></section>
-<section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="localizeBlankNodes" class="tsd-anchor"></a>
-<h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>localize<wbr/>Blank<wbr/>Nodes</span><a href="#localizeBlankNodes" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
-<div class="tsd-signature"><span class="tsd-kind-property">localize<wbr/>Blank<wbr/>Nodes</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">boolean</span></div><aside class="tsd-sources">
-<p>Inherited from QueryStringContext.localizeBlankNodes</p>
-<ul>
-<li>Defined in node_modules/@comunica/types/lib/IQueryContext.d.ts:45</li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="log" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>log</span><a href="#log" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">log</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type ">Logger</span></div><aside class="tsd-sources">
@@ -363,7 +356,6 @@ Defaults to { language: &#39;sparql&#39;, version: &#39;1.1&#39; }</p>
 <li><a href="#httpTimeout" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>http<wbr/>Timeout</span></a></li>
 <li><a href="#initialBindings" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>initial<wbr/>Bindings</span></a></li>
 <li><a href="#lenient" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>lenient</span></a></li>
-<li><a href="#localizeBlankNodes" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>localize<wbr/>Blank<wbr/>Nodes</span></a></li>
 <li><a href="#log" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>log</span></a></li>
 <li><a href="#queryFormat" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>query<wbr/>Format</span></a></li>
 <li><a href="#queryTimestamp" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>query<wbr/>Timestamp</span></a></li>
