--- a/functions/DataFactory.quad.html
+++ b/functions/DataFactory.quad.html
@@ -42,7 +42,7 @@
 <li>
 <h4><span class="tsd-kind-type-parameter">Q_In</span><span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type ">BaseQuad</span> = <span class="tsd-signature-type ">Quad</span></h4></li>
 <li>
-<h4><span class="tsd-kind-type-parameter">Q_Out</span><span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type ">BaseQuad</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">Q_Out</span><span class="tsd-signature-symbol">&gt;</span> = <a href="../classes/Quad.html" class="tsd-signature-type tsd-kind-class">Quad</a></h4></li></ul></section>
+<h4><span class="tsd-kind-type-parameter">Q_Out</span><span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type ">BaseQuad</span> = <a href="../classes/Quad.html" class="tsd-signature-type tsd-kind-class">Quad</a></h4></li></ul></section>
 <div class="tsd-parameters">
 <h4 class="tsd-parameters-title">Parameters</h4>
 <ul class="tsd-parameter-list">
