deploy: 8fd4e33cfbc55e9fdfce6055b2d644ecee6b94c6

--- a/modules.html
+++ b/modules.html
@@ -27,6 +27,7 @@
 <a href="classes/SPARQLDataDriver.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-128"></use></svg><span>SPARQLData<wbr/>Driver</span></a>
 <a href="classes/SPARQLGenerator.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-128"></use></svg><span>SPARQLGenerator</span></a>
 <a href="classes/SerializableNamedNode.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-128"></use></svg><span>Serializable<wbr/>Named<wbr/>Node</span></a>
+<a href="classes/SerializableThing.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-128"></use></svg><span>Serializable<wbr/>Thing</span></a>
 <a href="classes/Store.html" class="tsd-index-link tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-128"></use></svg><span>Store</span></a>
 <a href="classes/System.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-128"></use></svg><span>System</span></a>
 <a href="classes/User.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-128"></use></svg><span>User</span></a>
