deploy: 343bf68d43983714185abc65569036251b55c2df

--- a/modules.html
+++ b/modules.html
@@ -46,6 +46,7 @@
 <a href="interfaces/RDFObjectOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-256"></use></svg><span>RDFObject<wbr/>Options</span></a>
 <a href="interfaces/RDFSerializerConfig.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-256"></use></svg><span>RDFSerializer<wbr/>Config</span></a>
 <a href="interfaces/SPARQLDriverOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-256"></use></svg><span>SPARQLDriver<wbr/>Options</span></a>
+<a href="interfaces/SerializableArrayMemberOptions.html" class="tsd-index-link tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-256"></use></svg><span>Serializable<wbr/>Array<wbr/>Member<wbr/>Options</span></a>
 <a href="interfaces/SerializableObjectOptions.html" class="tsd-index-link tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-256"></use></svg><span>Serializable<wbr/>Object<wbr/>Options</span></a>
 <a href="interfaces/WriterOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-256"></use></svg><span>Writer<wbr/>Options</span></a>
 </div></section><section class="tsd-index-section"><h3 class="tsd-index-heading">Type Aliases</h3><div class="tsd-index-list"><a href="types/Bindings.html" class="tsd-index-link tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-2097152"></use></svg><span>Bindings</span></a>
@@ -63,6 +64,7 @@
 <a href="types/Quad_Subject.html" class="tsd-index-link tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-2097152"></use></svg><span>Quad_<wbr/>Subject</span></a>
 <a href="types/QueryStringContext.html" class="tsd-index-link tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-2097152"></use></svg><span>Query<wbr/>String<wbr/>Context</span></a>
 <a href="types/RDFMetadata.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-2097152"></use></svg><span>RDFMetadata</span></a>
+<a href="types/RDFSerializerOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-2097152"></use></svg><span>RDFSerializer<wbr/>Options</span></a>
 <a href="types/Subject.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-2097152"></use></svg><span>Subject</span></a>
 <a href="types/SubjectObjects.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-2097152"></use></svg><span>Subject<wbr/>Objects</span></a>
 <a href="types/SubjectPredicates.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-2097152"></use></svg><span>Subject<wbr/>Predicates</span></a>
