deploy: 43cf962f9a4926391ddc503e4f883b145d5bcd49

--- a/modules.html
+++ b/modules.html
@@ -9,6 +9,7 @@
 <a href="classes/Event.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Event</span></a>
 <a href="classes/Geometry.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Geometry</span></a>
 <a href="classes/Literal.html" class="tsd-index-link tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Literal</span></a>
+<a href="classes/MultiPolygonGeometry.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Multi<wbr/>Polygon<wbr/>Geometry</span></a>
 <a href="classes/NamedNode.html" class="tsd-index-link tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Named<wbr/>Node</span></a>
 <a href="classes/ObservableProperty.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Observable<wbr/>Property</span></a>
 <a href="classes/Observation.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Observation</span></a>
